--- a/pixiflex.com/html/allen-landing/assets/allen-html/assets/css/style.css
+++ b/pixiflex.com/html/allen-landing/assets/allen-html/assets/css/style.css
@@ -1037,7 +1037,7 @@ span.marking {
 .cta .cta_wrapper::after {
     content: '';
     position: absolute;
-    background: linear-gradient(90.67deg, #12141D 24.1%, rgba(18, 20, 29, 0) 84.85%);
+    background: linear-gradient(90.67deg, #11131b 24.1%, rgba(18, 20, 29, 0) 84.85%);
     width: 100%;
     height: 100%;
     top: 0;
